k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: todo-backend
  labels:  
    app: backend  
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: backend
  template:
    metadata: 
      name: backend
      labels: 
        app: backend
    spec:
      containers:
        - name: backend
          image: 119972959035.dkr.ecr.us-east-1.amazonaws.com/todo-backend:1.0
          ports:
            - containerPort: 5000
