k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  labels:
    app: frontend  
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec: 
      containers:
        - name: frontend
          image: 119972959035.dkr.ecr.us-east-1.amazonaws.com/todo-frontend:1.3
          ports:
            - containerPort: 80
