k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: backend-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: backend
